# cubic-weight-averager

./: .flake8  README.md  pyproject.toml
cwa/: cli.py
tests/cwa/: test_cli.py
