[tool.poetry]
name = "cwa"
version = "0.0.1"
description = "Cubic weight averager"
authors = ["Brett Irvine <13.brett@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25"
typer = "^0.3"


[tool.poetry.dev-dependencies]
# Testing
coverage = "5.4"
pytest = "6.2.2"
requests_mock = "^1.8"

# Static Analysis
flake8 = "3.8.4"
flake8-blind-except = "0.2.0"
flake8-eradicate = "1.0.0"
flake8-import-order = "0.18.1"
flake8-mutable = "1.2.0"
flake8-print = "4.0.0"
flake8-pytest-style = "1.3.0"
flake8-quotes = "3.2.0"
pep8-naming = "0.11.1"
vulture = "^2.0"

# Security Checks
bandit = "1.7.0"


[tool.poetry.scripts]
cli = 'cwa.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
